--- a/app/assets/website.html
+++ b/app/assets/website.html
@@ -3,67 +3,79 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Simple Calculator</title>
+    <title>Profile Form</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
-      /* Additional styles if needed */
+      /* Additional custom styles can go here */
     </style>
   </head>
-  <body class="bg-gray-100 flex items-center justify-center h-screen">
-    <div class="bg-white p-8 rounded-lg shadow-lg max-w-xs mx-auto">
-      <div
-        id="display"
-        class="bg-gray-200 p-4 text-right text-2xl rounded mb-4"
-      >
-        0
-      </div>
-      <div class="grid grid-cols-3 gap-4">
-        <button
-          class="col-span-1 bg-blue-500 text-white p-4 rounded"
-          onclick="appendNumber(1)"
-        >
-          1
-        </button>
-        <button
-          class="col-span-1 bg-blue-500 text-white p-4 rounded"
-          onclick="appendNumber(2)"
-        >
-          2
-        </button>
-        <button
-          class="col-span-1 bg-blue-500 text-white p-4 rounded"
-          onclick="appendNumber(3)"
-        >
-          3
-        </button>
-        <button
-          class="col-span-3 bg-green-500 text-white p-4 rounded"
-          onclick="calculate()"
-        >
-          =
-        </button>
+  <body class="bg-gray-100">
+    <div
+      class="min-h-screen flex items-center justify-center py-12 px-4 sm:px-6 lg:px-8"
+    >
+      <div class="max-w-md w-full space-y-8">
+        <div>
+          <h2 class="mt-6 text-center text-3xl font-extrabold text-gray-900">
+            Profile Information
+          </h2>
+        </div>
+        <form class="mt-8 space-y-6" action="#" method="POST">
+          <div class="rounded-md shadow-sm -space-y-px">
+            <div>
+              <label for="photo" class="sr-only">Profile Photo</label>
+              <div
+                class="flex items-center justify-center h-24 w-full bg-gray-300 text-gray-700"
+              >
+                <span>Profile Photo Placeholder</span>
+              </div>
+            </div>
+            <div class="pt-3">
+              <label for="name" class="sr-only">Full Name</label>
+              <input
+                id="name"
+                name="name"
+                type="text"
+                autocomplete="name"
+                required
+                class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 rounded-t-md focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+                placeholder="Full Name"
+              />
+            </div>
+            <div class="pt-3">
+              <label for="email-address" class="sr-only">Email address</label>
+              <input
+                id="email-address"
+                name="email"
+                type="email"
+                autocomplete="email"
+                required
+                class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 focus:z-10 sm:text-sm"
+                placeholder="Email address"
+              />
+            </div>
+          </div>
+
+          <div>
+            <label for="bio" class="sr-only">Bio</label>
+            <textarea
+              id="bio"
+              name="bio"
+              rows="4"
+              class="appearance-none rounded-none relative block w-full px-3 py-2 border border-gray-300 placeholder-gray-500 text-gray-900 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm"
+              placeholder="Bio"
+            ></textarea>
+          </div>
+
+          <div>
+            <button
+              type="submit"
+              class="group relative w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500"
+            >
+              Save Profile
+            </button>
+          </div>
+        </form>
       </div>
     </div>
-
-    <script>
-      let display = document.getElementById("display");
-      let expression = "";
-
-      function appendNumber(number) {
-        expression += number;
-        display.textContent = expression;
-      }
-
-      function calculate() {
-        try {
-          let result = eval(expression);
-          display.textContent = result;
-          expression = result;
-        } catch (e) {
-          display.textContent = "Error";
-          expression = "";
-        }
-      }
-    </script>
   </body>
 </html>
